--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sgudjonsson/electron-windows-starter.git"
+    "url": "git://github.com/sgudjonsson/electron-windows-starter.git"
   },
   "author": "Sigurbjörn Guðjónsson",
   "license": "MIT",
